Update Code/LIBSDataGenerator/src/main/java/com/medals/libsdatagenerator/service/CompositionalVariations.java
Changing as the removeLast() method is only available in Java 21 and above.

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>